--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
+  <title>TEAM X 1337 | WE ARE TEAM X</title>
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    
 
 {% seo %}
   </head>
@@ -20,7 +22,7 @@
         <section id="downloads">
             <a href="https://tinyurl.com/Xbomber-1" class="btn">XBOMBER</a>
             <a href="https://tinyurl.com/X-Spoofer-1" class="btn">XSPOOFER</a>
-          <!--a href="https://github.com/Ign0r3dH4x0r" class="btn btn-github"><span class="icon"></span>View on GitHub</a-->
+          <a href="https://github.com/WeAreTeamX" class="btn btn-github"><span class="icon"></span>GITHUB</a>
         </section>
       </div>
     </header>
