--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <!-- SEO / Google -->
+    <meta name="author" content="Author name here....">
+    <meta name="description" content="Description text here.....">
+    <link rel="canonical" href="URL here..."> 
+
+    <!-- Social: Facebook / Open Graph -->
+    <meta property="og:url" content="https://thex.ml">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="TEAM X 1337 OFFICIAL">
+    <meta property="og:image" content="https://i1.sndcdn.com/avatars-000751639510-u6pdec-t500x500.jpg"/>
+    <meta property="og:description" content="LATEST TOOLS & GEEK APPS DIRECTLY IN YOUR DEVICE!">
+    <meta property="og:site_name" content="Team X">
+    <meta property="article:author" content="https://www.facebook.com/Ign0r3dh4x0r">
+    <meta property="article:publisher" content="https://www.facebook.com/Ign0r3dh4x0r">
+
     
 
 {% seo %}
