--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <!-- SEO / Google -->
-    <meta name="author" content="Author name here....">
-    <meta name="description" content="Description text here.....">
-    <link rel="canonical" href="URL here..."> 
+    <meta name="author" content="Shayer Mahmud Sowmik">
+    <meta name="description" content="A Tiny Cyber Team of Bangladesh.">
+    <link rel="canonical" href="https://thex.ml"> 
 
     <!-- Social: Facebook / Open Graph -->
     <meta property="og:url" content="https://thex.ml">
@@ -35,9 +35,8 @@
         </a>
         <h2>BORN TO QUACK</h2>
         <section id="downloads">
-            <a href="https://tinyurl.com/Xbomber-1" class="btn">XBOMBER</a>
-            <a href="https://tinyurl.com/X-Spoofer-1" class="btn">XSPOOFER</a>
-          <a href="https://github.com/WeAreTeamX" class="btn btn-github"><span class="icon"></span>GITHUB</a>
+            <a href="https://tinyurl.com/Xbomber-1" class="btn btn-app">XBOMBER</a>
+            <a href="https://tinyurl.com/X-Spoofer-1" class="btn btn-app">XSPOOFER</a>
         </section>
       </div>
     </header>
