--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <meta property="og:url" content="https://thex.ml">
     <meta property="og:type" content="article">
     <meta property="og:title" content="TEAM X 1337 OFFICIAL">
+    <meta property="fb:app_id" content="858189118296094">
     <meta property="og:image" content="https://i1.sndcdn.com/avatars-000751639510-u6pdec-t500x500.jpg"/>
     <meta property="og:description" content="LATEST TOOLS & GEEK APPS DIRECTLY IN YOUR DEVICE!">
     <meta property="og:site_name" content="Team X">
