Xbomber Pro Update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
         </a>
         <h2>BORN TO QUACK</h2>
         <section id="downloads">
-            <a href="https://tiny.one/xbomber" class="btn btn-app">XBOMBER</a>
+            <a href="https://rotf.lol/XbomberPro" class="btn btn-app">XBOMBER PRO</a>
         </section>
       </div>
     </header>
