--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
         </a>
         <h2>BORN TO QUACK</h2>
         <section id="downloads">
-            <a href="https://rotf.lol/XbomberPro" class="btn btn-app">XBOMBER PRO</a>
+            <a href="https://tinyurl.com/XbomberProBeta" class="btn btn-app">XBOMBER PRO v2.1</a>
         </section>
       </div>
     </header>
