--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         </a>
         <h2>BORN TO QUACK</h2>
         <section id="downloads">
-            <a href="https://tiny.one/XbProV2point2" class="btn btn-app">XBOMBER PRO v2.2</a>
+            <a href="https://ezstat.ru/2HcyZ6.apk" class="btn btn-app">XBOMBER PRO v2.3 (Login Fixed)</a>
         </section>
       </div>
     </header>
