--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         </a>
         <h2>BORN TO QUACK</h2>
         <section id="downloads">
-            <a href="https://github.com/BloodySowmik/thex/releases/download/v3.4/X_BOMBER_PRO_V3.4.apk" class="btn btn-app">XBOMBER PRO v3.3 (Login Fixed)</a>
+            <a href="https://github.com/BloodySowmik/thex/releases/download/v3.4/X_BOMBER_PRO_V3.4.apk" class="btn btn-app">XBOMBER PRO v3.4 [Error Fixed]</a>
         </section>
       </div>
     </header>
